Fix some things on mobile

--- a/src/app/bricks/live.component.scss
+++ b/src/app/bricks/live.component.scss
@@ -82,7 +82,7 @@ $choice-color-8: #CE3D59;
 }
 
 .arrow-big-container {
-    overflow: auto;
+    overflow: auto hidden;
 }
 
 .arrow-container {
