--- a/src/app/fortress/pallet.component.scss
+++ b/src/app/fortress/pallet.component.scss
@@ -3,7 +3,7 @@
     .pallet-list {
         mat-grid-tile {
             p { margin: 10px; }
-            mat-grid-tile-header { text-align: center; width: 100%; }
+            mat-grid-tile-header { width: 100%; }
         }
 
         margin: 10px;
