--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ html {
     height: 100%;
 }
 
-body { 
+body {
     font-family: Roboto, Arial, sans-serif;
     margin: 0;
     display: flex;
@@ -37,6 +37,14 @@ app-root {
 .mat-button-toggle-label-content {
     text-align: center;
     flex: 1 1 100%;
+}
+
+.mat-list-item-content {
+    flex-grow: 1;
+}
+
+.mat-toolbar.mat-primary {
+    background-color: #111F33;
 }
 
 /// ng2-dragula css!
